Fix contact spacing

--- a/theme/moove/scss/moove/_frontpage.scss
+++ b/theme/moove/scss/moove/_frontpage.scss
@@ -363,8 +363,8 @@
         height: 36rem;
 
         .guides-header {
-            margin-left: 9rem;
-            margin-right: 9rem;
+            // margin-left: 9rem;
+            // margin-right: 9rem;
 
             h4 {
                 color: #20668e;
